2001-02-12  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/bicobj2ply.c: New.  Convert BIC ".obj" file to PLY format.
	See http://www.cc.gatech.edu/projects/large_models/ply.html.

	* tools/ply.c:
	* tools/ply.h: New.  Routines for reading and writing PLY, from
	gatech's "plytools" package, obtained at the above website.
	Changed to declare equal_strings() statically, as it conflicts
	with function in "volume_io".
	
2001-02-09  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools: New directory.

	* tools/bicobj2oogl.c: New.  Convert BIC ".obj" file to
	OOGL format, for viewing with Geomview.

2001-02-06  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Images/rgb_io_ppm.c (input_rgb_file): Added code to read
	PPM images.  This is completely untested, so left inactive.

2001-02-05  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* README.release: New.  Recipe for creating a new release.

	* Prog_utils/random.c (set_random_seed, get_random): Removed
	sun-only prototypes; Gilles Beaudoin
	<gilles.beaudoin@attglobal.net> reports they are no longer valid
	for solaris 7.

2001-01-28  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* NEWS: Updated.

	* Tagged as release-1_3_3.

	* configure.in: Put BIC libs into variable BIC_LIBS, rather than LIBS.
	Set VERSION to 1.3.3.

	* Makefile.am (libbicpl_la_LIBADD): Link $(BIC_LIBS) and $(imageio_LIBS).

	* Images/Makefile.am: Do not need $(imageio_LIBS).

2001-01-26  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* Tagged as release-1_3_2.
	* configure.in: Set VERSION to 1.3.2

	* configure.in: Disable shared libraries by default.

2001-01-23  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Tagged as release-1_3_1.
	
	* configure.in: Set VERSION to 1.3.1.
	* Makefile.am (libbicpl_la_LDFLAGS): Bumped library REVISION number.

	* Makefile.include:
	* Makefile.objects: Removed.

	* INSTALL.bicpl: New.

	* configure.in: Detect whether netpbm or IRIS image library